Fix java 8 compat
Signed-off-by: Andrew Butt <Andrew.Butt@amd.com>